# advent-of-code

./: .gitignore  2015-07.py  2015-08.py  2015-10.py  2015-12.py  2015-13.py  2015-14.py  2015-15.py  2015-17.py  2015-18.py  2015-19.py  2023-01.py  2023-03.py  2023-04.py  2023-19.py  2024-01.py  2024-03.py  2024-04.py  2024-05.py  2024-06.py  2024-07.py  2024-08.py  2024-09.py  2024-10.py  2024-11.py  2024-12.py  2024-13.py  2024-14.py  2025-01.py  2025-02.py  2025-03.py  2025-04.py  2025-05.py  2025-06.py  2025-07.py  2025-08.py  2025-09.py  blank.py  main.py  pyproject.toml  (+1 more)
archive/: new_day_template.py
archive/2015/: 01.py  02.py  03.py  04.py  05.py  06.py  2015-07.py  2015-08.py  2015-09.py  2015-11.py  2015-16.py
archive/2017/1/: __main__.py
archive/2017/11/: __main__.py
archive/2017/15/: __main__.py
archive/2017/16/: __main__.py
archive/2017/17/: __main__.py
archive/2017/2/: __main__.py
archive/2017/3/: __main__.py
archive/2017/4/: __main__.py
archive/2017/5/: __main__.py
archive/2017/6/: __main__.py
archive/2017/7/: __main__.py
archive/2017/square/: __main__.py
archive/2018/1/: __main__.py
archive/2019/: 02.py  05.py  06.py  07.py  utils.py
archive/2020/: day14_qviper.py  ritalybot.py  sol_crisbal_7.py  vocaly.py  zeph_5.py
archive/2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  21.py
archive/2023/: 2023-02.py
archive/2024/: 2024-01.py  2024-02.py  2024-03.py  2024-04.py  2024-08.py  2024-09.py
utils/: sessions-example.py  utils.py
(+31 files in other folders)
