[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dataclassy>=1.0.1",
    "icecream>=2.1.8",
    "matplotlib>=3.10.7",
    "more-itertools>=10.8.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "shapely>=2.1.2",
]
